[gd_scene load_steps=20 format=2]

[ext_resource path="res://people/CameraOrbit.gd" type="Script" id=1]
[ext_resource path="res://people/basic_person.gd" type="Script" id=2]
[ext_resource path="res://people/DoorOpening.gd" type="Script" id=3]
[ext_resource path="res://people/DoorClosing.gd" type="Script" id=4]
[ext_resource path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" type="Script" id=5]
[ext_resource path="res://people/person_fsm.tres" type="Resource" id=6]
[ext_resource path="res://people/needs/needs_list/thirsty.tres" type="Resource" id=7]
[ext_resource path="res://people/needs/needs_list/tired.tres" type="Resource" id=8]
[ext_resource path="res://people/needs/needs_list/dirty.tres" type="Resource" id=9]
[ext_resource path="res://people/needs/needs_list/number_2.tres" type="Resource" id=10]
[ext_resource path="res://scenary/enviroments/house_dementia/dementia_person/needs/sleepy_dementia.tres" type="Resource" id=11]
[ext_resource path="res://people/needs/needs_list/bored.tres" type="Resource" id=12]
[ext_resource path="res://people/needs/needs_list/hungry.tres" type="Resource" id=13]
[ext_resource path="res://people/needs/needs_list/number_1.tres" type="Resource" id=14]
[ext_resource path="res://people/needs/needs_list/dirty_clothes.tres" type="Resource" id=15]

[sub_resource type="CapsuleShape" id=1]
radius = 0.9
height = 1.9

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.0117647, 1, 0, 1 )
metallic = 1.0

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 3 )
mid_height = 2.0

[sub_resource type="CubeMesh" id=4]
size = Vector3( 1, 1, 0.5 )

[node name="person" type="KinematicBody"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
needs = [ ExtResource( 10 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 8 ), ExtResource( 12 ) ]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.5, 0, 0, 0, -6.55671e-08, 1.5, 0, -1.5, -6.55671e-08, 0, 3.22518, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="." groups=["person"]]
transform = Transform( 1.5, 0, 0, 0, -6.55671e-08, -1.5, 0, 1.5, -6.55671e-08, 0, 3.22518, 0 )
mesh = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.559199, -1.14006 )
mesh = SubResource( 4 )

[node name="CameraOrbit" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.95297, 0 )
script = ExtResource( 1 )

[node name="ClippedCamera" type="ClippedCamera" parent="CameraOrbit"]
transform = Transform( -1, 2.26267e-08, -8.44439e-08, 0, 0.965926, 0.258819, 8.74228e-08, 0.258819, -0.965926, 0, 0, -9.15398 )

[node name="DoorOpening" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.91218, -0.867123 )
enabled = true
cast_to = Vector3( 0, 0, -4 )
collide_with_areas = true
debug_shape_custom_color = Color( 0.0352941, 0.960784, 0.788235, 1 )
debug_shape_thickness = 4
script = ExtResource( 3 )

[node name="DoorClosing" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.91218, -0.867123 )
enabled = true
cast_to = Vector3( 0, 0, 4 )
collide_with_areas = true
debug_shape_custom_color = Color( 0.0352941, 0.960784, 0.788235, 1 )
debug_shape_thickness = 4
script = ExtResource( 4 )
close_door_rate = 0.2

[node name="StateMachinePlayer" type="Node" parent="."]
script = ExtResource( 5 )
state_machine = ExtResource( 6 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]
target_desired_distance = 10.0

[connection signal="transited" from="StateMachinePlayer" to="." method="_on_StateMachinePlayer_transited"]
[connection signal="updated" from="StateMachinePlayer" to="." method="_on_StateMachinePlayer_updated"]
